--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^6.7.96",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "less": "^4.1.2",
+    "less-loader": "^6.0.0",
+    "vue": "^2.6.11",
+    "vue-router": "^3.5.3",
+    "vuetify": "^2.6.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
